Horrible hack to prevent hovering on mobile (ios)

--- a/www/static/css/_components.scss
+++ b/www/static/css/_components.scss
@@ -267,10 +267,12 @@
       pointer-events: none;
       cursor: pointer;
     }
+
+    &.allow-hover .button:hover {
+      fill: #eee;
+    }
+
     & .button {
-      &:hover {
-        fill: #eee;
-      }
       &.flash {
         @include animation(flash-white 0.2s linear both);
       }
